fix: change html tag

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <body>
     <div class="wrap">
         <header>
-            <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/logo-white.png?raw=true"
-                alt="眼鏡logo">
+            <a href="#"><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/logo-white.png?raw=true"
+                alt="眼鏡logo"></a>
             <ul>
                 <li><a href="#">系列鏡框</a></li>
                 <li><a href="#">門市據點</a></li>
@@ -31,7 +31,7 @@
         <div class="banner">
             <p class="line1">Promise-Desert 2020 早春系列</p>
             <p class="line2">看得清，才能看得遠</p>
-            <p class="buy-button">立即購買</p>
+            <a class="buy-button" href="#">立即購買</a>
         </div>
         <section class="section2">
             <h2>用專業的心，做專業的事</h2>
@@ -156,16 +156,15 @@
             <h2>聯絡我們</h2>
             <p class="description">我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</p>
             <p class="question">姓名</p>
-            <p class="answer">陳小明</p>
+            <input class="answer" type="text" placeholder="陳小明">
             <p class="question">聯絡電話</p>
-            <p class="answer">0912-345-678</p>
+            <input class="answer" type="number" placeholder="0912-345-678">
             <p class="question">電子郵件</p>
-            <p class="answer">example@email.com</p>
+            <input class="answer" type="email" placeholder="example@email.com">
             <p class="question">意見反應</p>
-            <p class="answer long">請輸入您的意見</p>
-            <img src="https://icons.veryicon.com/png/o/miscellaneous/material-design-icons-2/ic_check_box_outline_blank.png"
-                alt="check box">
-            <p class="privacy">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。</p>
+            <textarea name="" id="">請輸入您的意見</textarea>
+            <br>
+            <input type="checkbox" name="" id="">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。
             <a href="#">確認送出</a>
         </section>
         <footer>
