update: delete previous HTML & CSS update

--- a/index.html
+++ b/index.html
@@ -162,9 +162,8 @@
             <p class="question">電子郵件</p>
             <input class="answer" type="email" placeholder="example@email.com">
             <p class="question">意見反應</p>
-            <textarea name="" id="">請輸入您的意見</textarea>
-            <br>
-            <input type="checkbox" name="" id="">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。
+            <input class="answer long" type="text" placeholder="請輸入您的意見">
+            <input class="privacy" type="checkbox" name="" id="">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。
             <a href="#">確認送出</a>
         </section>
         <footer>
