update: change section5 layout

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 <body>
     <div class="wrap">
         <header>
-            <a href="#"><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/logo-white.png?raw=true"
-                alt="眼鏡logo"></a>
+            <a href="#"><img
+                    src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/logo-white.png?raw=true"
+                    alt="眼鏡logo"></a>
             <ul>
                 <li><a href="#">系列鏡框</a></li>
                 <li><a href="#">門市據點</a></li>
@@ -97,60 +98,62 @@
         </section>
         <section class="section5">
             <h2>顧客推薦</h2>
-            <ul>
-                <li>
-                    <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-1.png?raw=true"
-                        alt="pictue of Jessy">
-                    <div>
+            <div>
+                <ul>
+                    <li>
+                        <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-1.png?raw=true"
+                            alt="pictue of Jessy">
                         <div>
-                            <p class="name">Jessy</p>
-                            <p class="comment">眼鏡品質優良，下次還會想來這邊購買！</p>
+                            <div>
+                                <p class="name">Jessy</p>
+                                <p class="comment">眼鏡品質優良，下次還會想來這邊購買！</p>
+                            </div>
+                            <div>
+                                <p>2021/06/20</p>
+                            </div>
                         </div>
+                    </li>
+                    <li>
+                        <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-2.png?raw=true"
+                            alt="pictue of 凱倫">
                         <div>
-                            <p>2021/06/20</p>
+                            <div>
+                                <p class="name">凱倫</p>
+                                <p class="comment">做工細緻、鏡架很輕盈，待久也不會覺得有負擔，推薦給大家！</p>
+                            </div>
+                            <div>
+                                <p>2021/04/18</p>
+                            </div>
                         </div>
-                    </div>
-                </li>
-                <li>
-                    <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-2.png?raw=true"
-                        alt="pictue of 凱倫">
-                    <div>
+                    </li>
+                    <li>
+                        <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-3.png?raw=true"
+                            alt="pictue of 悠悠">
                         <div>
-                            <p class="name">凱倫</p>
-                            <p class="comment">做工細緻、鏡架很輕盈，待久也不會覺得有負擔，推薦給大家！</p>
+                            <div>
+                                <p class="name">悠悠</p>
+                                <p class="comment">謝謝客服人員的詳細回答，成功買到了喜歡的眼鏡，下次會再回購！</p>
+                            </div>
+                            <div>
+                                <p>2020/12/25</p>
+                            </div>
                         </div>
+                    </li>
+                    <li>
+                        <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-4.png?raw=true"
+                            alt="pictue of Kyuan">
                         <div>
-                            <p>2021/04/18</p>
+                            <div>
+                                <p class="name">Kyuan</p>
+                                <p class="comment">服務很好，品質沒有任何問題，非常喜歡。</p>
+                            </div>
+                            <div>
+                                <p>2020/10/31</p>
+                            </div>
                         </div>
-                    </div>
-                </li>
-                <li>
-                    <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-3.png?raw=true"
-                        alt="pictue of 悠悠">
-                    <div>
-                        <div>
-                            <p class="name">悠悠</p>
-                            <p class="comment">謝謝客服人員的詳細回答，成功買到了喜歡的眼鏡，下次會再回購！</p>
-                        </div>
-                        <div>
-                            <p>2020/12/25</p>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-4.png?raw=true"
-                        alt="pictue of Kyuan">
-                    <div>
-                        <div>
-                            <p class="name">Kyuan</p>
-                            <p class="comment">服務很好，品質沒有任何問題，非常喜歡。</p>
-                        </div>
-                        <div>
-                            <p>2020/10/31</p>
-                        </div>
-                    </div>
-                </li>
-            </ul>
+                    </li>
+                </ul>
+            </div>
         </section>
         <section class="contact">
             <h2>聯絡我們</h2>
@@ -175,24 +178,24 @@
                     <li>部落格</li>
                     <li>常見問題</li>
                 </ul>
-            <div>
-                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic-social-fb.png?raw=true"
-                    alt="facebook logo"><img
-                    src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_ig.png?raw=true"
-                    alt="instagram logo"><img
-                    src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_line.png?raw=true"
-                    alt="line logo">
+                <div>
+                    <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic-social-fb.png?raw=true"
+                        alt="facebook logo"><img
+                        src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_ig.png?raw=true"
+                        alt="instagram logo"><img
+                        src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_line.png?raw=true"
+                        alt="line logo">
+                </div>
             </div>
-        </div>
-        <div class="center">    
-            <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic-social-fb.png?raw=true"
-                alt="">
-            <p>0800-000-000</p>
-            <br>
-            <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic-social-fb.png?raw=true"
-                alt="">
-            <p>glasses@business.com</p>
-        </div>
+            <div class="center">
+                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic-social-fb.png?raw=true"
+                    alt="">
+                <p>0800-000-000</p>
+                <br>
+                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic-social-fb.png?raw=true"
+                    alt="">
+                <p>glasses@business.com</p>
+            </div>
             <hr>
             <div class="bottom">
                 <p>Copyright © 2020 Glasses.All rights reserved.</p>
