--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=mail" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=phone_enabled" />
 </head>
 
 <body>
@@ -188,12 +190,14 @@
                 </div>
             </div>
             <div class="center">
-                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic-social-fb.png?raw=true"
-                    alt="">
+                <span class="material-symbols-outlined">
+                    phone_enabled
+                    </span>
                 <p>0800-000-000</p>
                 <br>
-                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic-social-fb.png?raw=true"
-                    alt="">
+                <span class="material-symbols-outlined">
+                    mail
+                    </span>
                 <p>glasses@business.com</p>
             </div>
             <hr>
