--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=mail" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=phone_enabled" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=mail" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=phone_enabled" />
 </head>
 
 <body>
@@ -158,18 +160,22 @@
             </div>
         </section>
         <section class="contact">
-            <h2>聯絡我們</h2>
-            <p class="description">我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</p>
-            <p class="question">姓名</p>
-            <input class="answer" type="text" placeholder="陳小明">
-            <p class="question">聯絡電話</p>
-            <input class="answer" type="number" placeholder="0912-345-678">
-            <p class="question">電子郵件</p>
-            <input class="answer" type="email" placeholder="example@email.com">
-            <p class="question">意見反應</p>
-            <input class="answer long" type="text" placeholder="請輸入您的意見">
-            <input class="privacy" type="checkbox" name="" id="">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。
-            <a href="#">確認送出</a>
+            <div>
+                <h2>聯絡我們</h2>
+                <p class="description">我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</p>
+                <label for="name">姓名</label>
+                <input type="text" name="name" id="name" placeholder="陳小明">
+                <label for="phonenumber">聯絡電話</label>
+                <input type="tel" name="phonenumber" id="phonenumber" placeholder="0912-345-678">
+                <label for="email">電子郵件</label>
+                <input type="email" name="email" id="email" placeholder="example@email.com">
+                <label for="comment">意見反應</label>
+                <textarea name="comment" id="comment" placeholder="請輸入您的意見"></textarea>
+                <input class="privacy" type="checkbox" name="checkbox" id="checkbox">
+                <label class="privacy" for="checkbox">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。</label>
+                
+                <a href="#">確認送出</a>
+            </div>
         </section>
         <footer>
             <div class="top">
@@ -192,12 +198,12 @@
             <div class="center">
                 <span class="material-symbols-outlined">
                     phone_enabled
-                    </span>
+                </span>
                 <p>0800-000-000</p>
                 <br>
                 <span class="material-symbols-outlined">
                     mail
-                    </span>
+                </span>
                 <p>glasses@business.com</p>
             </div>
             <hr>
