--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=mail" />
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=phone_enabled" />
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 
 <body>
@@ -173,7 +171,7 @@
                 <textarea name="comment" id="comment" placeholder="請輸入您的意見"></textarea>
                 <input class="privacy" type="checkbox" name="checkbox" id="checkbox">
                 <label class="privacy" for="checkbox">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。</label>
-                
+
                 <a href="#">確認送出</a>
             </div>
         </section>
@@ -197,8 +195,8 @@
             </div>
             <div class="center">
                 <span class="material-symbols-outlined">
-                    phone_enabled
-                </span>
+                    call
+                    </span>
                 <p>0800-000-000</p>
                 <br>
                 <span class="material-symbols-outlined">
