--- a/index.html
+++ b/index.html
@@ -177,39 +177,39 @@
         </section>
         <footer>
             <div class="top">
-                <ul>
-                    <li>首頁</li>
-                    <li>系列鏡框</li>
-                    <li>門市據點</li>
-                    <li>部落格</li>
-                    <li>常見問題</li>
+                <ul class="navbar">
+                    <li><a href="#">首頁</a></li>
+                    <li><a href="#">系列鏡框</a></li>
+                    <li><a href="#">門市據點</a></li>
+                    <li><a href="#">部落格</a></li>
+                    <li><a href="#">常見問題</a></li>
                 </ul>
-                <div>
-                    <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic-social-fb.png?raw=true"
-                        alt="facebook logo"><img
-                        src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_ig.png?raw=true"
-                        alt="instagram logo"><img
-                        src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_line.png?raw=true"
-                        alt="line logo">
-                </div>
+                    <ul class="sns-menu">
+                        <li><a href="#"><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic-social-fb.png?raw=true" alt="facebook logo"></a></li>
+                        <li><a href="#"><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_ig.png?raw=true" alt="instagram logo"></a></li>
+                        <li><a href="#"><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_line.png?raw=true" alt="line logo"></a></li>
+                    </ul>
             </div>
             <div class="center">
-                <span class="material-symbols-outlined">
-                    call
+                <div class="phone">
+                    <span class="material-symbols-outlined">
+                        call
+                        </span>
+                    <p>0800-000-000</p>
+                </div>
+                <div class="mail">
+                    <span class="material-symbols-outlined">
+                        mail
                     </span>
-                <p>0800-000-000</p>
-                <br>
-                <span class="material-symbols-outlined">
-                    mail
-                </span>
-                <p>glasses@business.com</p>
+                    <p>glasses@business.com</p>
+                </div>
             </div>
             <hr>
             <div class="bottom">
                 <p>Copyright © 2020 Glasses.All rights reserved.</p>
                 <ul>
-                    <li>隱私權政策</li>
-                    <li>服務條款</li>
+                    <li><a href="#">隱私權政策</a></li>
+                    <li><a href="#">服務條款</a></li>
                 </ul>
             </div>
     </div>
