--- a/index.html
+++ b/index.html
@@ -99,13 +99,17 @@
             </ul>
         </section>
         <section class="section5">
-            <h2>顧客推薦</h2>
+
             <div>
+                <h2>顧客推薦</h2>
+
                 <ul>
                     <li>
-                        <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-1.png?raw=true"
-                            alt="pictue of Jessy">
                         <div>
+                            <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-1.png?raw=true"
+                                alt="pictue of Jessy">
+                        </div>
+                        <div class="comment-content">
                             <div>
                                 <p class="name">Jessy</p>
                                 <p class="comment">眼鏡品質優良，下次還會想來這邊購買！</p>
@@ -116,9 +120,11 @@
                         </div>
                     </li>
                     <li>
-                        <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-2.png?raw=true"
-                            alt="pictue of 凱倫">
                         <div>
+                            <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-2.png?raw=true"
+                                alt="pictue of 凱倫">
+                        </div>
+                        <div class="comment-content">
                             <div>
                                 <p class="name">凱倫</p>
                                 <p class="comment">做工細緻、鏡架很輕盈，待久也不會覺得有負擔，推薦給大家！</p>
@@ -129,9 +135,11 @@
                         </div>
                     </li>
                     <li>
-                        <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-3.png?raw=true"
-                            alt="pictue of 悠悠">
                         <div>
+                            <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-3.png?raw=true"
+                                alt="pictue of 悠悠">
+                        </div>
+                        <div class="comment-content">
                             <div>
                                 <p class="name">悠悠</p>
                                 <p class="comment">謝謝客服人員的詳細回答，成功買到了喜歡的眼鏡，下次會再回購！</p>
@@ -142,9 +150,11 @@
                         </div>
                     </li>
                     <li>
-                        <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-4.png?raw=true"
-                            alt="pictue of Kyuan">
                         <div>
+                            <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-4.png?raw=true"
+                                alt="pictue of Kyuan">
+                        </div>
+                        <div class="comment-content">
                             <div>
                                 <p class="name">Kyuan</p>
                                 <p class="comment">服務很好，品質沒有任何問題，非常喜歡。</p>
@@ -156,6 +166,7 @@
                     </li>
                 </ul>
             </div>
+        </section>
         </section>
         <section class="contact">
             <div>
@@ -184,17 +195,23 @@
                     <li><a href="#">部落格</a></li>
                     <li><a href="#">常見問題</a></li>
                 </ul>
-                    <ul class="sns-menu">
-                        <li><a href="#"><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic-social-fb.png?raw=true" alt="facebook logo"></a></li>
-                        <li><a href="#"><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_ig.png?raw=true" alt="instagram logo"></a></li>
-                        <li><a href="#"><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_line.png?raw=true" alt="line logo"></a></li>
-                    </ul>
+                <ul class="sns-menu">
+                    <li><a href="#"><img
+                                src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic-social-fb.png?raw=true"
+                                alt="facebook logo"></a></li>
+                    <li><a href="#"><img
+                                src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_ig.png?raw=true"
+                                alt="instagram logo"></a></li>
+                    <li><a href="#"><img
+                                src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_line.png?raw=true"
+                                alt="line logo"></a></li>
+                </ul>
             </div>
             <div class="center">
                 <div class="phone">
                     <span class="material-symbols-outlined">
                         call
-                        </span>
+                    </span>
                     <p>0800-000-000</p>
                 </div>
                 <div class="mail">
