update: adjust section4 layout

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
             </ul>
         </section>
         <section class="section4">
+            <div>
             <h2>聯名設計鏡框</h2>
             <ul>
                 <li>
@@ -97,6 +98,7 @@
                     <p>YOUTH</p>
                 </li>
             </ul>
+        </div>
         </section>
         <section class="section5">
 
