update: adjust section3 layout

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             </ul>
         </section>
         <section class="section3">
+            <div>
             <h2>經典系列鏡框</h2>
             <ul>
                 <li>
@@ -84,6 +85,7 @@
                     <p>FUNCTIONAL</p>
                 </li>
             </ul>
+        </div>
         </section>
         <section class="section4">
             <div>
