update: adjust section2 layout

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <a class="buy-button" href="#">立即購買</a>
         </div>
         <section class="section2">
+            <div>
             <h2>用專業的心，做專業的事</h2>
             <ul>
                 <li>
@@ -64,6 +65,7 @@
                     <p class="description">使用世界知名頂級品牌，抗UV、防汙鍍膜薄型非球面鏡片。</p>
                 </li>
             </ul>
+        </div>
         </section>
         <section class="section3">
             <div>
