update: adjust footer layout

--- a/index.html
+++ b/index.html
@@ -38,71 +38,71 @@
         </div>
         <section class="section2">
             <div>
-            <h2>用專業的心，做專業的事</h2>
-            <ul>
-                <li>
-                    <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section2-1.png?raw=true"
-                        alt="dollar image">
-                    <p class="feature">單一價格</p>
-                    <p class="description">無論任何度數皆不需追加費用即可擁有適合自己的薄型球面鏡片。</p>
-                </li>
-                <li>
-                    <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section2-2.png?raw=true"
-                        alt="clock image">
-                    <p class="feature">20 分鐘即可取件</p>
-                    <p class="description">為了您的寶貴時間著想，以豐富專業知識與技術將結帳到交件的時間縮減至最快 20 分鐘即可完成。</p>
-                </li>
-                <li>
-                    <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section2-3.png?raw=true"
-                        alt="heart image">
-                    <p class="feature">安心售後服務</p>
-                    <p class="description">我們提供長達 120 天的保固售後服務，不限會員資格皆享有免費深層保養及專業維修服務。</p>
-                </li>
-                <li>
-                    <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-sectioin2-4.png?raw=true"
-                        alt="glasses image">
-                    <p class="feature">關於鏡片</p>
-                    <p class="description">使用世界知名頂級品牌，抗UV、防汙鍍膜薄型非球面鏡片。</p>
-                </li>
-            </ul>
-        </div>
+                <h2>用專業的心，做專業的事</h2>
+                <ul>
+                    <li>
+                        <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section2-1.png?raw=true"
+                            alt="dollar image">
+                        <p class="feature">單一價格</p>
+                        <p class="description">無論任何度數皆不需追加費用即可擁有適合自己的薄型球面鏡片。</p>
+                    </li>
+                    <li>
+                        <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section2-2.png?raw=true"
+                            alt="clock image">
+                        <p class="feature">20 分鐘即可取件</p>
+                        <p class="description">為了您的寶貴時間著想，以豐富專業知識與技術將結帳到交件的時間縮減至最快 20 分鐘即可完成。</p>
+                    </li>
+                    <li>
+                        <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section2-3.png?raw=true"
+                            alt="heart image">
+                        <p class="feature">安心售後服務</p>
+                        <p class="description">我們提供長達 120 天的保固售後服務，不限會員資格皆享有免費深層保養及專業維修服務。</p>
+                    </li>
+                    <li>
+                        <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-sectioin2-4.png?raw=true"
+                            alt="glasses image">
+                        <p class="feature">關於鏡片</p>
+                        <p class="description">使用世界知名頂級品牌，抗UV、防汙鍍膜薄型非球面鏡片。</p>
+                    </li>
+                </ul>
+            </div>
         </section>
         <section class="section3">
             <div>
-            <h2>經典系列鏡框</h2>
-            <ul>
-                <li>
-                    <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-1.png?raw=true"
-                        alt="woman with glasses">
-                    <p>OPTICAL</p>
-                </li>
-                <li>
-                    <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-2.png?raw=true"
-                        alt="woman with sun glasses">
-                    <p>SUNGLASSES</p>
-                </li>
-                <li>
-                    <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-3.png?raw=true"
-                        alt="old man with glasses">
-                    <p>FUNCTIONAL</p>
-                </li>
-            </ul>
-        </div>
+                <h2>經典系列鏡框</h2>
+                <ul>
+                    <li>
+                        <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-1.png?raw=true"
+                            alt="woman with glasses">
+                        <p>OPTICAL</p>
+                    </li>
+                    <li>
+                        <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-2.png?raw=true"
+                            alt="woman with sun glasses">
+                        <p>SUNGLASSES</p>
+                    </li>
+                    <li>
+                        <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-3.png?raw=true"
+                            alt="old man with glasses">
+                        <p>FUNCTIONAL</p>
+                    </li>
+                </ul>
+            </div>
         </section>
         <section class="section4">
             <div>
-            <h2>聯名設計鏡框</h2>
-            <ul>
-                <li>
-                    <div class="picture1"></div>
-                    <p>DOUBLE A+</p>
-                </li>
-                <li>
-                    <div class="picture2"></div>
-                    <p>YOUTH</p>
-                </li>
-            </ul>
-        </div>
+                <h2>聯名設計鏡框</h2>
+                <ul>
+                    <li>
+                        <div class="picture1"></div>
+                        <p>DOUBLE A+</p>
+                    </li>
+                    <li>
+                        <div class="picture2"></div>
+                        <p>YOUTH</p>
+                    </li>
+                </ul>
+            </div>
         </section>
         <section class="section5">
 
@@ -193,50 +193,51 @@
             </div>
         </section>
         <footer>
-            <div class="top">
-                <ul class="navbar">
-                    <li><a href="#">首頁</a></li>
-                    <li><a href="#">系列鏡框</a></li>
-                    <li><a href="#">門市據點</a></li>
-                    <li><a href="#">部落格</a></li>
-                    <li><a href="#">常見問題</a></li>
-                </ul>
-                <ul class="sns-menu">
-                    <li><a href="#"><img
-                                src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic-social-fb.png?raw=true"
-                                alt="facebook logo"></a></li>
-                    <li><a href="#"><img
-                                src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_ig.png?raw=true"
-                                alt="instagram logo"></a></li>
-                    <li><a href="#"><img
-                                src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_line.png?raw=true"
-                                alt="line logo"></a></li>
-                </ul>
-            </div>
-            <div class="center">
-                <div class="phone">
-                    <span class="material-symbols-outlined">
-                        call
-                    </span>
-                    <p>0800-000-000</p>
+            <div>
+                <div class="top">
+                    <ul class="navbar">
+                        <li><a href="#">首頁</a></li>
+                        <li><a href="#">系列鏡框</a></li>
+                        <li><a href="#">門市據點</a></li>
+                        <li><a href="#">部落格</a></li>
+                        <li><a href="#">常見問題</a></li>
+                    </ul>
+                    <ul class="sns-menu">
+                        <li><a href="#"><img
+                                    src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic-social-fb.png?raw=true"
+                                    alt="facebook logo"></a></li>
+                        <li><a href="#"><img
+                                    src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_ig.png?raw=true"
+                                    alt="instagram logo"></a></li>
+                        <li><a href="#"><img
+                                    src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_line.png?raw=true"
+                                    alt="line logo"></a></li>
+                    </ul>
                 </div>
-                <div class="mail">
-                    <span class="material-symbols-outlined">
-                        mail
-                    </span>
-                    <p>glasses@business.com</p>
+                <div class="center">
+                    <div class="phone">
+                        <span class="material-symbols-outlined">
+                            call
+                        </span>
+                        <p>0800-000-000</p>
+                    </div>
+                    <div class="mail">
+                        <span class="material-symbols-outlined">
+                            mail
+                        </span>
+                        <p>glasses@business.com</p>
+                    </div>
                 </div>
-            </div>
-            <hr>
-            <div class="bottom">
-                <p>Copyright © 2020 Glasses.All rights reserved.</p>
-                <ul>
-                    <li><a href="#">隱私權政策</a></li>
-                    <li><a href="#">服務條款</a></li>
-                </ul>
+                <hr>
+                <div class="bottom">
+                    <p>Copyright © 2020 Glasses.All rights reserved.</p>
+                    <ul>
+                        <li><a href="#">隱私權政策</a></li>
+                        <li><a href="#">服務條款</a></li>
+                    </ul>
+                </div>
             </div>
     </div>
-
     </footer>
     </div>
 
