--- a/index.html
+++ b/index.html
@@ -21,15 +21,17 @@
 <body>
     <div class="wrap">
         <header>
-            <a href="#"><img
-                    src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/logo-white.png?raw=true"
-                    alt="眼鏡logo"></a>
-            <ul>
-                <li><a href="#">系列鏡框</a></li>
-                <li><a href="#">門市據點</a></li>
-                <li><a href="#">部落格</a></li>
-                <li><a href="#">常見問題</a></li>
-            </ul>
+            <div>
+                <a href="#"><img
+                        src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/logo-white.png?raw=true"
+                        alt="眼鏡logo"></a>
+                <ul>
+                    <li><a href="#">系列鏡框</a></li>
+                    <li><a href="#">門市據點</a></li>
+                    <li><a href="#">部落格</a></li>
+                    <li><a href="#">常見問題</a></li>
+                </ul>
+            </div>
         </header>
         <div class="banner">
             <p class="line1">Promise-Desert 2020 早春系列</p>
