update: adjust footer layout

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             </div>
         </header>
         <div class="banner">
-            <div>
+            
             <p class="line1">Promise-Desert 2020 早春系列</p>
             <p class="line2">看得清，才能看得遠</p>
             <a class="buy-button" href="#">立即購買</a>
-        </div>
+        
         </div>
         <section class="section2">
             <div>
@@ -221,16 +221,16 @@
                 </div>
                 <div class="center">
                     <div class="phone">
-                        <span class="material-symbols-outlined">
+                        <a href="#"><span class="material-symbols-outlined">
                             call
-                        </span>
-                        <p>0800-000-000</p>
+                        </span></a>
+                        <a href="#">0800-000-000</a>
                     </div>
                     <div class="mail">
-                        <span class="material-symbols-outlined">
+                        <a href="#"><span class="material-symbols-outlined">
                             mail
-                        </span>
-                        <p>glasses@business.com</p>
+                        </span></a>
+                        <a href="#">glasses@business.com</a>
                     </div>
                 </div>
                 <hr>
