feat: add contact section mobile code

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                         <label for="comment">意見反應</label>
                         <textarea name="comment" id="comment" placeholder="請輸入您的意見"></textarea>
                     </li>
-                    <li>
+                    <li class="checkbox">
                         <input class="privacy" type="checkbox" name="checkbox" id="checkbox">
                         <label class="privacy" for="checkbox">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。</label>
                     </li>
