feat: add footer mobile code

--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
         </section>
         <footer>
             <div>
+                <div class="mb-top">
                 <div class="top">
                     <ul class="navbar">
                         <li><a href="#">首頁</a></li>
@@ -233,6 +234,7 @@
                         <a href="#">glasses@business.com</a>
                     </div>
                 </div>
+            </div>
                 <hr>
                 <div class="bottom">
                     <p>Copyright © 2020 Glasses.All rights reserved.</p>
