--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
             </div>
         </header>
         <div class="banner">
-            
-            <p class="line1">Promise-Desert 2020 早春系列</p>
-            <p class="line2">看得清，才能看得遠</p>
-            <a class="buy-button" href="#">立即購買</a>
-        
+            <div>
+                <p class="line1">Promise-Desert 2020 早春系列</p>
+                <p class="line2">看得清，才能看得遠</p>
+                <div><a class="buy-button" href="#">立即購買</a>
+                </div>
+            </div>
         </div>
         <section class="section2">
             <div>
@@ -200,41 +201,41 @@
         <footer>
             <div>
                 <div class="mb-top">
-                <div class="top">
-                    <ul class="navbar">
-                        <li><a href="#">首頁</a></li>
-                        <li><a href="#">系列鏡框</a></li>
-                        <li><a href="#">門市據點</a></li>
-                        <li><a href="#">部落格</a></li>
-                        <li><a href="#">常見問題</a></li>
-                    </ul>
-                    <ul class="sns-menu">
-                        <li><a href="#"><img
-                                    src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic-social-fb.png?raw=true"
-                                    alt="facebook logo"></a></li>
-                        <li><a href="#"><img
-                                    src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_ig.png?raw=true"
-                                    alt="instagram logo"></a></li>
-                        <li><a href="#"><img
-                                    src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_line.png?raw=true"
-                                    alt="line logo"></a></li>
-                    </ul>
-                </div>
-                <div class="center">
-                    <div class="phone">
-                        <a href="#"><span class="material-symbols-outlined">
-                            call
-                        </span></a>
-                        <a href="#">0800-000-000</a>
+                    <div class="top">
+                        <ul class="navbar">
+                            <li><a href="#">首頁</a></li>
+                            <li><a href="#">系列鏡框</a></li>
+                            <li><a href="#">門市據點</a></li>
+                            <li><a href="#">部落格</a></li>
+                            <li><a href="#">常見問題</a></li>
+                        </ul>
+                        <ul class="sns-menu">
+                            <li><a href="#"><img
+                                        src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic-social-fb.png?raw=true"
+                                        alt="facebook logo"></a></li>
+                            <li><a href="#"><img
+                                        src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_ig.png?raw=true"
+                                        alt="instagram logo"></a></li>
+                            <li><a href="#"><img
+                                        src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_line.png?raw=true"
+                                        alt="line logo"></a></li>
+                        </ul>
                     </div>
-                    <div class="mail">
-                        <a href="#"><span class="material-symbols-outlined">
-                            mail
-                        </span></a>
-                        <a href="#">glasses@business.com</a>
+                    <div class="center">
+                        <div class="phone">
+                            <a href="#"><span class="material-symbols-outlined">
+                                    call
+                                </span></a>
+                            <a href="#">0800-000-000</a>
+                        </div>
+                        <div class="mail">
+                            <a href="#"><span class="material-symbols-outlined">
+                                    mail
+                                </span></a>
+                            <a href="#">glasses@business.com</a>
+                        </div>
                     </div>
                 </div>
-            </div>
                 <hr>
                 <div class="bottom">
                     <p>Copyright © 2020 Glasses.All rights reserved.</p>
