--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
             <div>
                 <h2>聯絡我們</h2>
                 <p class="description">我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</p>
+                <form action="#">
                 <ul>
                     <li>
                         <label for="name">姓名</label>
@@ -195,7 +196,8 @@
                         <label class="privacy" for="checkbox">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。</label>
                     </li>
                 </ul>
-                <a href="#">確認送出</a>
+                <button type="submit">確認送出</button>
+            </form>
             </div>
         </section>
         <footer>
