update: adjust section3 layout

--- a/index.html
+++ b/index.html
@@ -69,18 +69,22 @@
                 <h2>經典系列鏡框</h2>
                 <ul>
                     <li>
-                        <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-1.png?raw=true"
-                            alt="woman with glasses">
+                        <div><img
+                                src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-1.png?raw=true"
+                                alt="woman with glasses">
+                        </div>
                         <p>OPTICAL</p>
                     </li>
                     <li>
-                        <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-2.png?raw=true"
-                            alt="woman with sun glasses">
+                        <div><img
+                                src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-2.png?raw=true"
+                                alt="woman with sun glasses"></div>
                         <p>SUNGLASSES</p>
                     </li>
                     <li>
-                        <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-3.png?raw=true"
-                            alt="old man with glasses">
+                        <div><img
+                                src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-3.png?raw=true"
+                                alt="old man with glasses"></div>
                         <p>FUNCTIONAL</p>
                     </li>
                 </ul>
@@ -174,30 +178,30 @@
                 <h2>聯絡我們</h2>
                 <p class="description">我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</p>
                 <form action="#">
-                <ul>
-                    <li>
-                        <label for="name">姓名</label>
-                        <input type="text" name="name" id="name" placeholder="陳小明">
-                    </li>
-                    <li>
-                        <label for="phonenumber">聯絡電話</label>
-                        <input type="tel" name="phonenumber" id="phonenumber" placeholder="0912-345-678">
-                    </li>
-                    <li>
-                        <label for="email">電子郵件</label>
-                        <input type="email" name="email" id="email" placeholder="example@email.com">
-                    </li>
-                    <li>
-                        <label for="comment">意見反應</label>
-                        <textarea name="comment" id="comment" placeholder="請輸入您的意見"></textarea>
-                    </li>
-                    <li class="checkbox">
-                        <input class="privacy" type="checkbox" name="checkbox" id="checkbox">
-                        <label class="privacy" for="checkbox">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。</label>
-                    </li>
-                </ul>
-                <button type="submit">確認送出</button>
-            </form>
+                    <ul>
+                        <li>
+                            <label for="name">姓名</label>
+                            <input type="text" name="name" id="name" placeholder="陳小明">
+                        </li>
+                        <li>
+                            <label for="phonenumber">聯絡電話</label>
+                            <input type="tel" name="phonenumber" id="phonenumber" placeholder="0912-345-678">
+                        </li>
+                        <li>
+                            <label for="email">電子郵件</label>
+                            <input type="email" name="email" id="email" placeholder="example@email.com">
+                        </li>
+                        <li>
+                            <label for="comment">意見反應</label>
+                            <textarea name="comment" id="comment" placeholder="請輸入您的意見"></textarea>
+                        </li>
+                        <li class="checkbox">
+                            <input class="privacy" type="checkbox" name="checkbox" id="checkbox">
+                            <label class="privacy" for="checkbox">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。</label>
+                        </li>
+                    </ul>
+                    <button type="submit">確認送出</button>
+                </form>
             </div>
         </section>
         <footer>
