--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <title>眼鏡官網</title>
+    <link rel="icon" href="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/logo-white.png?raw=true" type="icon"/>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
@@ -14,9 +15,12 @@
     <div class="wrap">
         <header>
             <div>
-                <a href="#"><img
-                        src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/logo-white.png?raw=true"
-                        alt="眼鏡logo"></a>
+                <h1>
+                    <a href="#"><img
+                            src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/logo-white.png?raw=true"
+                            alt="眼鏡logo"></a>
+                </h1>
+
                 <ul>
                     <li><a href="#">系列鏡框</a></li>
                     <li><a href="#">門市據點</a></li>
