--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1">
     <title>眼鏡官網</title>
     <link rel="icon" href="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/logo-white.png?raw=true" type="icon"/>
     <link rel="stylesheet" href="style.css">
